# rnotify

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: README.md  config.rs  curl_util.rs  destination_config.rs  destination_kind.rs  error.rs  http_util.rs  lib.rs  main.rs  message.rs  message_router.rs  senderror.rs
src/destination/: config.rs  message_condition.rs  message_condition_config.rs  mod.rs  notification_config.rs  routed_destination.rs
src/destination/kinds/: desktop.rs  desktop_notification.rs  discord.rs  file.rs  mail.rs  mod.rs  rust_receiver.rs  telegram.rs
src/destinations/: discord.rs  file.rs  mail.rs  mod.rs  telegram.rs
src/http_util/: mod.rs
src/message/: author.rs  builder.rs  component.rs  detail_builder.rs  formatted_detail.rs  message_detail_builder.rs  mod.rs
src/send_error/: borrowed.rs  mod.rs  owned.rs  reported.rs
src/util/: html.rs  mod.rs
test/: discord_example.toml  mixed.toml
