[package]
name = "rnotify"
version = "0.1.0"
edition = "2021"

[lib]
name = "rnotifylib"
path = "src/lib.rs"

[[bin]]
name = "rnotify"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.142", features = ["derive"]}
toml = "0.5.9"
serde_json = "1.0.83"
chrono = "0.4.19"
hostname = "0.3.1"

discord-webhook = { version = "0.1.0", features = ["models"], default-features = false, optional = true }
minreq = { version = "2.6.0", default-features = false, features = ["https-rustls", "json-using-serde"], optional = true}

lettre = { version = "0.10.1", default-features = false, features = ["serde", "rustls-tls", "builder", "smtp-transport"], optional = true }

[features]
default = ["discord", "telegram"]
http = ["dep:minreq"]

discord = ["dep:discord-webhook", "http"]
telegram = ["http"]
mail = ["dep:lettre"]

[profile.release]
opt-level = 'z'
lto = true