[package]
name = "rnotify"
version = "0.1.2"
description = "Rnotify allows sending informative messages to various destinations such as Discord, Telegram and Mail through the command line."
edition = "2021"
authors = ["James Hendry <jameshendry05+rnotify@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tyhdefu/rnotify"
license = "MIT"
keywords = ["notification"]
categories = ["command-line-utilities"]

[lib]
name = "rnotifylib"
path = "src/lib.rs"

[[bin]]
name = "rnotify"
path = "src/main.rs"
required-features = ["binary"]

[dependencies]
clap = { version = "3.2.16", features = ["derive"], optional = true }
serde = { version = "1.0.142", features = ["derive"]}
typetag = "0.2.5"
toml = "0.5.9"
serde_json = "1.0.83"
chrono = "0.4.19"
hostname = "0.3.1"

discord-webhook = { version = "0.1.0", features = ["models"], default-features = false, optional = true }
minreq = { version = "2.6.0", default-features = false, features = ["https-rustls", "json-using-serde"], optional = true}

lettre = { version = "0.10.1", default-features = false, features = ["serde", "rustls-tls", "builder", "smtp-transport"], optional = true }

[features]
default = ["discord", "telegram"]
binary = ["dep:clap"]
http = ["dep:minreq"]

discord = ["dep:discord-webhook", "http"]
telegram = ["http"]
mail = ["dep:lettre"]


[profile.release]
opt-level = 'z'
lto = true